--- a/week2/day1/exercises/XP/exercise4_5_6/index.html
+++ b/week2/day1/exercises/XP/exercise4_5_6/index.html
@@ -5,7 +5,7 @@
     
     <link rel="stylesheet" href="./main.css">
     
-    <title>XP EX1</title>
+    <title>week 1/EX4</title>
 </head>
 <body>
     <script src="./main.js"></script>
