--- a/week3/day2/dailychallenge/index.html
+++ b/week3/day2/dailychallenge/index.html
@@ -23,7 +23,7 @@
     <p>Generated story: 
     <span id="story"></span>
     </p>
-
+<button>shuffle</button>
     <script src="./main.js"></script>
 
  </body>
